--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,132 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  height: 100%;
 }
 
-@media (prefers-color-scheme: dark) {
+.cl-userButtonPopoverCard {
+  height: 25%;
+  width: 20% !important;
+}
+
+.cl-internal-b3fm6y {
+  background: rgba(40, 40, 130, 0.7);
+}
+.cl-card {
+  background: rgba(40, 40, 130, 0.7);
+  width: 90%;
+}
+
+.cl-formFieldInput {
+  background: rgba(55, 55, 100, 0);
+}
+.cl-formButtonPrimary {
+  box-shadow: 0 0 5px 1px #ff66ff;
+  background-image: linear-gradient(to right, #cc75db, #602ea6);
+}
+.cl-socialButtonsBlockButton {
+  box-shadow: 0 0 5px 1px #ffffff;
+}
+.cl-internal-b3fm6y {
+  background-image: url("/signin.png");
+  background-size: contain; /* Hoặc có thể sử dụng 'contain' hoặc kích thước cụ thể */
+  background-repeat: no-repeat; /* Ngăn lặp lại ảnh */
+  background-position: start center; /* Căn giữa ảnh */
+  /* Các thuộc tính CSS khác để tùy chỉnh nền */
+  width: 550px;
+  height: 445px;
+  margin: 97px 2px 15px 0px;
+  transform: rotate(-90deg);
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-color: transparent;
+}
+
+.cl-internal-v37v88 {
+  transform: rotate(90deg);
+  margin: 30px 0px 0px -55px;
+}
+.cl-internal-uf3377 {
+  transform: rotate(90deg);
+  margin: -70px 0px 15px 0px;
+}
+@layer components {
+  .bg-xam {
+    @apply bg-[#21222D];
+  }
+}
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 0 0% 100%;
+    --foreground: 0 0% 3.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 3.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 0 0% 3.9%;
+
+    --primary: 0 0% 9%;
+    --primary-foreground: 0 0% 98%;
+
+    --secondary: 0 0% 96.1%;
+    --secondary-foreground: 0 0% 9%;
+
+    --muted: 0 0% 96.1%;
+    --muted-foreground: 0 0% 45.1%;
+
+    --accent: 0 0% 96.1%;
+    --accent-foreground: 0 0% 9%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+
+    --border: 0 0% 89.8%;
+    --input: 0 0% 89.8%;
+    --ring: 0 0% 3.9%;
+
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 0 0% 3.9%;
+    --foreground: 0 0% 98%;
+
+    --card: 0 0% 3.9%;
+    --card-foreground: 0 0% 98%;
+
+    --popover: 0 0% 3.9%;
+    --popover-foreground: 0 0% 98%;
+
+    --primary: 0 0% 98%;
+    --primary-foreground: 0 0% 9%;
+
+    --secondary: 0 0% 14.9%;
+    --secondary-foreground: 0 0% 98%;
+
+    --muted: 0 0% 14.9%;
+    --muted-foreground: 0 0% 63.9%;
+
+    --accent: 0 0% 14.9%;
+    --accent-foreground: 0 0% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+
+    --border: 0 0% 14.9%;
+    --input: 0 0% 14.9%;
+    --ring: 0 0% 83.1%;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
